# paw

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  cheatsheet.html  launch.command  paw  pyproject.toml  setup  tutorial  tutorial.html
.cursor/rules/: paw.mdc
agents/: README.md  architect.md  bug-auditor.md  builder.md  code-reviewer.md  devils-advocate.md  docs-writer.md  environment-checker.md  fe-reviewer.md  incident-commander.md  integration-tester.md  merge-resolver.md  migration-architect.md  perf-checker.md  php-reviewer.md  planner.md  rollback-planner.md  security-reviewer.md  test-runner.md
contexts/: README.md  dev.md  research.md  review.md  security.md
docs/: architecture-diagram.md  overview-for-engineers.md  panda-protocol-slack-announcement.md  panda-protocol-slides.md  tech-forge-slack-announcement.md  tech-forge-slides.md
examples/: README.md
examples/buggy-app/: README.md  app.py
hooks/: README.md  _lib.py  auto_test_detect.sh  branch_guard.py  branch_guard_precommit.py  git_safety.py  install_hooks.py
rules/: README.md  branch-hygiene.md  error-handling.md  git-doctrine.md  no-secrets-in-code.md  security-basics.md  test-first.md
skills/: README.md
skills/architecture/: SKILL.md
skills/devils-advocate/: SKILL.md
skills/frontend/: SKILL.md
skills/git-safety/: SKILL.md
skills/php-laravel/: SKILL.md
skills/quality-gate/: SKILL.md
tests/: test_branch_guard.py  test_git_safety.py  test_lib.py  test_navigator.py
tutorial_engine/: content.py  engine.py
(+4 files in other folders)
