[project]
name = "paw"
version = "0.2.0"
description = "An AI SDLC starter kit — agents, skills, hooks, rules, and contexts for governed AI-assisted development."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jay Fuller" }]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
