[project]
name = "paw"
version = "0.2.0"
description = "Personal Agent Workflows — an AI SDLC starter kit with agents, skills, hooks, rules, and contexts."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jay Fuller" }]

[tool.ruff]
target-version = "py310"
exclude = ["examples/"]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
